# bytes

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: main.yml
Docs/: c++ style guide.md
Include/Bytes/: BytesView.h  Endian.h  MutableBytes.h  SharedBytes.h
Tests/: CMakeLists.txt
Tests/Include/: DataGenerator.h
Tests/Source/: BytesViewTest.cpp  EndienTest.cpp  MutableBytesTest.cpp  SharedBytesTest.cpp  main.cpp
Tool/Clang-Format/: FormatOnSave.vsix  clang-format-all.py
Tool/Clang-Format/Test/: ClangFormatAfter.cpp  ClangFormatBefore.cpp
ToolChain/: conandeps_legacy.cmake  dist-packaging.cmake  functions.cmake  set-cxx-compiler-option.cmake  test-cxx-flags.cmake
